# org-cli

./: Cargo.toml  README.md  build.sh  install.sh
src/: commands.rs  main.rs
src/commands/: types.rs
