[package]
name = "org-cli"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
aws-config = "0.49.0"
aws-sdk-ec2 = "0.19.0"
aws-sdk-secretsmanager = "0.19.0"
tokio = { version = "1", features = ["full"] }
inquire = "0.4.0"
to_vec = "0.1.0"
home = "0.5.4"
indicatif = "0.17.1"
